[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/Graphics/Enemy/walking/Enemy_Walking-12.png" type="Texture" id=1]
[ext_resource path="res://Assets/Graphics/Enemy/walking/Enemy_Walking-10.png" type="Texture" id=2]
[ext_resource path="res://Assets/Graphics/Enemy/idle/Enemy-1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Graphics/Enemy/walking/Enemy_Walking-8.png" type="Texture" id=4]
[ext_resource path="res://Assets/Graphics/Enemy/walking/Enemy_Walking-13.png" type="Texture" id=5]
[ext_resource path="res://Assets/Graphics/Enemy/walking/Enemy_Walking-15.png" type="Texture" id=6]
[ext_resource path="res://Assets/Graphics/Enemy/walking/Enemy_Walking-16.png" type="Texture" id=7]
[ext_resource path="res://Assets/Graphics/Enemy/walking/Enemy_Walking-6.png" type="Texture" id=8]
[ext_resource path="res://Assets/Graphics/Enemy/walking/Enemy_Walking-7.png" type="Texture" id=9]
[ext_resource path="res://Assets/Graphics/Enemy/walking/Enemy_Walking-5.png" type="Texture" id=10]
[ext_resource path="res://Assets/Graphics/Enemy/walking/Enemy_Walking-2.png" type="Texture" id=11]
[ext_resource path="res://Assets/Graphics/Enemy/walking/Enemy_Walking-3.png" type="Texture" id=12]
[ext_resource path="res://Assets/Graphics/Enemy/walking/Enemy_Walking-14.png" type="Texture" id=13]
[ext_resource path="res://Assets/Graphics/Enemy/walking/Enemy_Walking-1.png" type="Texture" id=14]
[ext_resource path="res://Assets/Graphics/Enemy/walking/Enemy_Walking-9.png" type="Texture" id=15]
[ext_resource path="res://Assets/Graphics/Enemy/walking/Enemy_Walking-11.png" type="Texture" id=16]
[ext_resource path="res://Assets/Graphics/Enemy/walking/Enemy_Walking-4.png" type="Texture" id=17]
[ext_resource path="res://Scenes/enemyLogic.gd" type="Script" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 17 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 15 ), ExtResource( 2 ), ExtResource( 16 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 13 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "enemyWalk",
"speed": 60.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "EnemyIdle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 9.95198
height = 18.9189

[node name="enemy" type="Node2D"]

[node name="RigidBody2D" type="RigidBody2D" parent="." groups=["enemy"]]
mode = 2
mass = 10.0
gravity_scale = 20.0
script = ExtResource( 18 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="RigidBody2D"]
position = Vector2( 0, -56 )
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 1 )
animation = "EnemyIdle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2( -6.286, -2.842 )
rotation = -1.5708
scale = Vector2( 5.04, 3.952 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="RigidBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D/Area2D"]
position = Vector2( -6.286, -2.842 )
rotation = -1.5708
scale = Vector2( 5.04, 3.952 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="RigidBody2D"]
rotation = 1.5708
scale = Vector2( 7.384, 7 )
enabled = true
__meta__ = {
"_editor_description_": "Player detection"
}

[node name="Timer" type="Timer" parent="RigidBody2D"]

[connection signal="body_entered" from="RigidBody2D/Area2D" to="RigidBody2D" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="RigidBody2D/Area2D" to="RigidBody2D" method="_on_Area2D_body_exited"]
[connection signal="timeout" from="RigidBody2D/Timer" to="RigidBody2D" method="_on_Timer_timeout"]
